# haraltr

./: Cargo.toml  README.md  codelldb-sudo  config.example.toml  config.toml  cr
common/: Cargo.toml
common/src/: config.rs  lib.rs
daemon/: Cargo.toml
daemon/src/: bt_mgmt.rs  config.rs  device.rs  input.rs  ipc.rs  kalman.rs  mac.rs  main.rs  passwd.rs  proximity.rs  state.rs  wake_up.rs
daemon/src/logind/: controller.rs  mod.rs  session.rs  watcher.rs
daemon/src/session/: controller.rs  logind_session.rs  mod.rs
daemon/src/web/: api.rs  auth.rs  bluez.rs  bt_devices.rs  mod.rs  sse.rs  state.rs
daemon/static/: index.html  login.html
daemon/static/css/: style.css
daemon/static/js/: app.js  login.js
packaging/: haraltr.service  haraltr.tmpfiles.conf
pam/: Cargo.toml
pam/src/: lib.rs
src/: bt_mgmt.rs  kalman.rs  main.rs
