[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1"
argon2 = { version = "0.5", features = ["std"] }
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
bdaddr = "0.1.2"
btmgmt = "0.2.5"
btmgmt-packet = "0.2.5"
chrono = "0.4.43"
colored = "3.1.1"
cookie = "0.18.1"
evdev = "0.13.2"
futures = "0.3"
hex = "0.4"
libc = "0.2.180"
rand = "0.10"
rpassword = "7"
rust-embed = { version = "8", features = ["debug-embed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.9.8"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["fs", "set-header"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
xdg = "3.0"
zbus = "5.13.2"
zeroize = "1"
